--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -5,6 +5,10 @@
                 <div layout="row" layout-align="center center">
                     List of Employees
                 </div>
+                <mat-form-field>
+                    <mat-label>Filter</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
+                </mat-form-field>
                 <div>
                     <button mat-raised-button color="primary" (click)="OpenAddEditDialog()" >Add Employee</button>
                 </div>
