--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -4,27 +4,27 @@
 <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content class="content">
         <div class="row">
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline" class="w-50">
                 <mat-label>Email Id</mat-label>
                 <input matInput type="text" formControlName="email">
             </mat-form-field>
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline" class="w-100">
                 <mat-label>User Name</mat-label>
                 <input matInput type="text" formControlName="userName">
             </mat-form-field>
         </div> <br>
         <div class="row">
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline">
                 <mat-label>Password</mat-label>
                 <input matInput type="text" formControlName="password">
             </mat-form-field>
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline">
                 <mat-label>Name</mat-label>
                 <input matInput type="text" formControlName="employeeName">
             </mat-form-field>
         </div> <br>
         <div class="row">
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline">
                 <mat-label>Age</mat-label>
                 <input matInput type="number" formControlName="employeeAge">
             </mat-form-field>
@@ -38,20 +38,22 @@
                 <mat-label>Department</mat-label>
                 <mat-select formControlName="departmentID">
                     <mat-option *ngFor="let department of departments" [value]="department.departmentID">
-                        {{department.departmentName}} </mat-option>
+                        {{department.departmentName}}
+                    </mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Product</mat-label>
                 <mat-select formControlName="productID">
-                    <mat-option *ngFor="let product of products" [value]="product.productID"> {{product.productName}}
+                    <mat-option *ngFor="let product of products" [value]="product.productID">
+                        {{product.productName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
     </div>
     <div mat-dialog-actions class="action">
-        <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
-        <button mat-raised-button color="primary" type="submit"> Create</button>
+        <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
+        <button mat-raised-button color="primary" type="submit">Create</button>
     </div>
 </form>
