--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -16,12 +16,12 @@
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
             <h4 class="mat-headline-5">{{ TotalProducts }}</h4>
-            <div class="d-flex align-items-center m-t-16">
+            <!-- <div class="d-flex align-items-center m-t-16">
               <button mat-mini-fab class="bg-light-error text-error shadow-none icon-27">
                 <i-tabler name="arrow-down-right" class="icon-20"></i-tabler>
               </button>
               <div class="mat-body-1 m-l-4">last year</div>
-            </div>
+            </div> -->
           </mat-card-content>
          
         </mat-card>
