--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,16 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the background color and opacity as needed */
+    backdrop-filter: blur(5px); /* Adjust the blur value as needed */
+    z-index: 9999; /* Ensure the loader is displayed on top of other content */
+  }
