--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -16,12 +16,12 @@
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
             <h4 class="mat-headline-5">{{ TotalProducts }}</h4>
-            <div class="d-flex align-items-center m-t-16">
+            <!-- <div class="d-flex align-items-center m-t-16">
               <button mat-mini-fab class="bg-light-error text-error shadow-none icon-27">
                 <i-tabler name="arrow-down-right" class="icon-20"></i-tabler>
               </button>
               <div class="mat-body-1 m-l-4">last year</div>
-            </div>
+            </div> -->
           </mat-card-content>
          
         </mat-card>
@@ -39,13 +39,13 @@
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
             <h4 class="mat-headline-5">{{ TotalEmployees }}</h4>
-            <div class="d-flex align-items-center m-t-16">
+            <!-- <div class="d-flex align-items-center m-t-16">
               <button mat-mini-fab class="bg-light-error text-error shadow-none icon-27">
                 <i-tabler name="arrow-down-right" class="icon-20"></i-tabler>
               </button>
               <div class="mat-body-1 f-w-600 m-l-12">+9%</div>
               <div class="mat-body-1 m-l-4">last year</div>
-            </div>
+            </div> -->
           </mat-card-content>
         </mat-card>
       </div>
@@ -62,13 +62,13 @@
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
             <h4 class="mat-headline-5">{{TotalCustomers}}</h4>
-            <div class="d-flex align-items-center m-t-16">
+            <!-- <div class="d-flex align-items-center m-t-16">
               <button mat-mini-fab class="bg-light-error text-error shadow-none icon-27">
                 <i-tabler name="arrow-down-right" class="icon-20"></i-tabler>
               </button>
               <div class="mat-body-1 f-w-600 m-l-12">+9%</div>
               <div class="mat-body-1 m-l-4">last year</div>
-            </div>
+            </div> -->
           </mat-card-content>
         </mat-card>
       </div>
@@ -85,13 +85,13 @@
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
             <h4 class="mat-headline-5">{{ TotalDepartments }}</h4>
-            <div class="d-flex align-items-center m-t-16">
+            <!-- <div class="d-flex align-items-center m-t-16">
               <button mat-mini-fab class="bg-light-error text-error shadow-none icon-27">
                 <i-tabler name="arrow-down-right" class="icon-20"></i-tabler>
               </button>
               <div class="mat-body-1 f-w-600 m-l-12">+9%</div>
               <div class="mat-body-1 m-l-4">last year</div>
-            </div>
+            </div> -->
           </mat-card-content>
 
         </mat-card>
@@ -111,14 +111,19 @@
             
           </div>
         </div>
-  <apx-chart
-    [series]="chartOptions.series"
-    [chart]="chartOptions.chart"
-    [dataLabels]="chartOptions.dataLabels"
-    [plotOptions]="chartOptions.plotOptions"
-    [xaxis]="chartOptions.xaxis"
-    [stroke]="chartOptions.stroke"
-  ></apx-chart>
+        <kendo-chart>
+          <kendo-chart-title text="Units sold"></kendo-chart-title>
+          <kendo-chart-category-axis>
+            <kendo-chart-category-axis-item [categories]="Products">
+            </kendo-chart-category-axis-item>
+          </kendo-chart-category-axis>
+          <kendo-chart-series>
+            <kendo-chart-series-item type="bar" color="#68BBE3" [data]="Employees">
+            </kendo-chart-series-item>
+            <kendo-chart-series-item type="bar" color="#0E86D4" [data]="Customers">
+            </kendo-chart-series-item>
+          </kendo-chart-series>
+        </kendo-chart>
       </mat-card-content>
     </mat-card>
   </div>
@@ -132,14 +137,17 @@
             
           </div>
         </div>
-        <apx-chart
-        [series]="chartOption.series"
-        [chart]="chartOption.chart"
-        [labels]="chartOption.labels"
-        [title]="chartOption.title"
-        [theme]="chartOption.theme"
-        [responsive]="chartOption.responsive"
-      ></apx-chart>
+        <kendo-chart>
+          <kendo-chart-series>
+            <kendo-chart-series-item
+              type="pie"
+              [data]="PieChartData"
+              [highlight]="seriesHighlight"
+            >
+            </kendo-chart-series-item>
+          </kendo-chart-series>
+        </kendo-chart>
+
       </mat-card-content>
     </mat-card>
   </div>
