--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -5,19 +5,21 @@
                 <div layout="row" layout-align="center center">
                     Departments
                 </div>
-                <mat-form-field>
-                    <mat-label>Filter</mat-label>
-                        <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
-                </mat-form-field>
                 <div>
-                    <button mat-raised-button color="primary" (click)="OpenAddDepartment()" >Create</button>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Filter</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
+                    </mat-form-field>
+
+                    <button mat-raised-button class="create-btn" color="primary"
+                        (click)="OpenAddDepartment()">Create</button>
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
-                <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
+                <table mat-table [dataSource]="dataSource" class="w-100" matSort>
                     <!-- Position Column -->
                     <ng-container matColumnDef="name">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Name
                         </th>
                         <td mat-cell *matCellDef="let department" class="mat-body-1">
@@ -49,6 +51,6 @@
                 </table>
             </div>
         </mat-card-content>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" > </mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5"> </mat-paginator>
     </mat-card>
 </div>
