--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -2,24 +2,22 @@
     <mat-card class="cardWithShadow">
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
-                <div layout="row" layout-align="center center">
-                    Employees
+                <div layout="row" layout-align="center center  ">
+                  Employees
                 </div>
-            
-                
-                <mat-form-field>
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center">
+                  <mat-form-field appearance="outline">
                     <mat-label>Filter</mat-label>
-                        <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
-                </mat-form-field>
-                <div>
-                    <button mat-raised-button color="primary" (click)="OpenAddEmployee()" >Create</button>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
+                  </mat-form-field>
+                  <button mat-raised-button class="create-btn" color="primary" (click)="OpenAddEmployee()">Create</button>
                 </div>
-            </mat-card-title>
+              </mat-card-title>
             <div class="table-responsive m-t-16">
                 <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
                     <!-- Position Column -->
                     <ng-container matColumnDef="name">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
                             Name
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -29,7 +27,7 @@
 
                     <!-- Name Column -->
                     <ng-container matColumnDef="age">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
                             Age
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -39,7 +37,7 @@
 
                     <!-- Weight Column -->
                     <ng-container matColumnDef="salary">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
                             Salary
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -49,7 +47,7 @@
 
                     <!-- Symbol Column -->
                     <ng-container matColumnDef="department">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
                             Department
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -58,7 +56,7 @@
                     </ng-container>
 
                     <ng-container matColumnDef="product">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Product
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
