--- a/src/app/pages/employee/employee.component.scss
+++ b/src/app/pages/employee/employee.component.scss
@@ -1,20 +1,15 @@
 .title-flex-container {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    align-items: center;
+
+    mat-form-field {
+        height: 20%;
+        padding: 0px 10px 0 0;
+    }
 }
 
-.loading{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    font-weight: bold;
-    color: yellow;
-    text-align: center;
-    z-index: 1;
-    background-color: rgba(43, 39, 39, 0.616);
+.create-btn{
+    width: 100px;
+    height: 52px;
 }
