--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -5,12 +5,12 @@
                 <div layout="row" layout-align="center center">
                     Products
                 </div>
-                <mat-form-field>
+                <div>
+                <mat-form-field appearance="outline">
                     <mat-label>Filter</mat-label>
                         <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
                 </mat-form-field>
-                <div>
-                    <button mat-raised-button color="primary" (click)="OpenAddProductDialog()" >Create</button>
+                    <button mat-raised-button class="create-btn" color="primary" (click)="OpenAddProductDialog()" >Create</button>
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
