--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -45,7 +45,7 @@
     </button>
 
     <div class="p-x-12 m-t-12">
-      <a [routerLink]="['/authentication/login']" mat-stroked-button color="primary" class="w-100">Logout</a>
+      <a [routerLink]="'/authentication/login'" mat-stroked-button color="primary" class="w-100" (click)="onLogoutHandle()">Logout</a>
     </div>
   </mat-menu>
 </mat-toolbar>
