--- a/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/src/app/layouts/full/sidebar/sidebar.component.html
@@ -3,7 +3,9 @@
   <mat-nav-list class="sidebar-list">
     <app-nav-item *ngFor="let item of navItems" [item]="item"> </app-nav-item>
   </mat-nav-list>
-  <!-- <div class="p-24 m-t-auto">
+
+  
+  <div class="p-24 m-t-auto">
     <div class="bg-light-primary d-flex align-items-center rounded p-20 m-t-20">
       <div>
         <h5 class="mat-subtitle-1 f-s-16 f-w-600 m-b-8">
@@ -25,5 +27,5 @@
         class="side-img"
       />
     </div>
-  </div> -->
+  </div>
 </div>
