--- a/src/app/pages/manager/manager.component.html
+++ b/src/app/pages/manager/manager.component.html
@@ -64,6 +64,15 @@
                         </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="assign">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Appoint </th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            <button mat-icon-button color="primary" (click)="OpenAppointManager(element)">
+                                <mat-icon>add</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="delete">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
