--- a/src/app/pages/authentication/reset-password/reset-password.component.html
+++ b/src/app/pages/authentication/reset-password/reset-password.component.html
@@ -5,7 +5,7 @@
           <mat-card-content class="p-32">
             <div class="text-center">
               <a [routerLink]="['/dashboard']">
-                <img src="./assets/images/logos/dark-logo.svg" class="align-middle m-2" alt="logo" />
+                <img src="./assets/images/logos/stint360-logo.png" class="align-middle m-2" alt="logo" width="150px"/>
               </a>
             </div>
 
