--- a/src/app/pages/manager/dialog/manager-add/manager-add.component.html
+++ b/src/app/pages/manager/dialog/manager-add/manager-add.component.html
@@ -139,6 +139,6 @@
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
-        <button mat-raised-button color="primary" type="submit"> Create</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="managerForm.invalid"> Create </button>
     </div>
 </form>
