--- a/src/app/pages/manager/dialog/manager-appoint/manager-appoint.component.html
+++ b/src/app/pages/manager/dialog/manager-appoint/manager-appoint.component.html
@@ -120,6 +120,6 @@
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
-        <button mat-raised-button color="primary" type="submit"> Appoint</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="managerForm.invalid"> Appoint </button>
     </div>
 </form>
