--- a/src/app/pages/product/dialog/product-edit/product-edit.component.html
+++ b/src/app/pages/product/dialog/product-edit/product-edit.component.html
@@ -39,6 +39,6 @@
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
-        <button mat-raised-button color="primary" type="submit"> Update </button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="productForm.invalid"> Update </button>
     </div>
 </form>
